# Mobile-SLAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/core/: CMakeLists.txt
src/core/backend/: estimator.cpp  optimizer.cpp  sliding_window.cpp
src/core/backend/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projection_factor.cpp
src/core/common/: frame.cpp
src/core/config/: slam_config.cpp
src/core/frontend/: failure_detector.cpp  feature_manager.cpp  feature_tracker.cpp
src/core/frontend/initialization/: initial_alignment.cpp  initial_sfm.cpp  initializer.cpp  solve_5pts.cpp
src/core/utility/: dataset_loader.cpp
tests/cpp/: CMakeLists.txt  test_common_types.cpp
wasm/: CMakeLists.txt  build_ceres.sh  build_opencv.sh  test_wasm_integration.mjs  test_wasm_module.mjs  vio_bindings.cpp
wasm/libs/ceres/include/ceres/: autodiff_cost_function.h  cost_function_to_functor.h  cubic_interpolation.h  dynamic_autodiff_cost_function.h  dynamic_cost_function_to_functor.h  dynamic_numeric_diff_cost_function.h  gradient_checker.h  line_manifold.h  loss_function.h  manifold.h  numeric_diff_cost_function.h  numeric_diff_first_order_function.h  ordered_groups.h  problem.h  rotation.h  sized_cost_function.h  sphere_manifold.h  tiny_solver_cost_function_adapter.h
wasm/libs/ceres/include/ceres/internal/: autodiff.h  fixed_array.h  householder_vector.h  numeric_diff.h
wasm/libs/ceres/lib/cmake/Ceres/: CeresTargets.cmake
wasm/libs/ceres_build/: CMakeCache.txt  CTestTestfile.cmake  CeresConfig-install.cmake  Makefile  cmake_install.cmake  install_manifest.txt
wasm/libs/ceres_build/internal/ceres/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
wasm/libs/opencv_build/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_data_config.hpp  opencv_python_config.cmake  opencv_python_tests.cfg  version_string.tmp
wasm/libs/opencv_build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/flann/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/gapi/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/highgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/imgcodecs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/imgproc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/java/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/js/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/ml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/objc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/objdetect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/photo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/stitching/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/.firstpass/ts/: Makefile  (+2 more)
wasm/libs/opencv_build/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.simd_declarations.hpp
wasm/libs/opencv_build/modules/core/: CTestTestfile.cmake  Makefile  arithm.simd_declarations.hpp  cmake_install.cmake  convert.simd_declarations.hpp  convert_scale.simd_declarations.hpp  count_non_zero.simd_declarations.hpp  mathfuncs_core.simd_declarations.hpp  matmul.simd_declarations.hpp  mean.simd_declarations.hpp  merge.simd_declarations.hpp  split.simd_declarations.hpp  stat.simd_declarations.hpp  sum.simd_declarations.hpp  version_string.inc
wasm/libs/opencv_build/modules/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sift.simd_declarations.hpp
wasm/libs/opencv_build/modules/flann/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.simd_declarations.hpp  bilateral_filter.simd_declarations.hpp  box_filter.simd_declarations.hpp  cmake_install.cmake  color_hsv.simd_declarations.hpp  color_rgb.simd_declarations.hpp  color_yuv.simd_declarations.hpp  filter.simd_declarations.hpp  median_blur.simd_declarations.hpp  morph.simd_declarations.hpp  smooth.simd_declarations.hpp  sumpixels.simd_declarations.hpp
wasm/libs/opencv_build/modules/java_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gen_java.json
wasm/libs/opencv_build/modules/js_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  headers.txt
wasm/libs/opencv_build/modules/objc_bindings_generator/: CTestTestfile.cmake  Makefile  gen_objc.json
wasm/libs/opencv_build/modules/python_bindings_generator/: CTestTestfile.cmake  Makefile  headers.txt  pyopencv_custom_headers.h
wasm/libs/opencv_build/modules/python_tests/: CTestTestfile.cmake  Makefile
wasm/libs/opencv_build/modules/video/: CTestTestfile.cmake  Makefile  cmake_install.cmake
wasm/libs/opencv_build/python_loader/cv2/: config.py
(+138 files in other folders)
